@@ -1,5 +1,8 @@
 2002-01-13  Mads Bondo Dydensborg  <madsdyd@ripley>
 
+	* mingw
+	More mingw support from Samuel Listopad II
+
 	* gcc3
 	Tried to add gcc3 support, may or may not work.
 
